@@ -5,6 +5,8 @@
 3. Correctly set 'storeLyricsInMpdDir' config item, UI was setting wrong config
    item.
 4. Set minimum Qt5 version to 5.11
+6. Correctly set song details 'time', 'year', 'track' and 'disc' for streams
+   from online services.
 
 2.4.1
 -----
